--- a/main.html
+++ b/main.html
@@ -8,14 +8,14 @@
     <title>POS Burger</title>
 </head>
 <body>
-    <header class="p-2 bg-primary" style="height: 10vh;">
-        <p>Angels Burger</p>
+    <header class="p-1" style="height: 10vh; background-color: #f8b10a">
+        <p class="font-weight-bold text-capitalized text-white " style="font-size: 1.5rem; font-family: 'Roboto', sans-serif; margin-left: 1em;"><span style="font-size: 2rem; font-weight: bolder; color: black;">A</span>ngels Burger</p>
     </header >
-    <main class="container-xxl d-flex flex-row" style="height: 90vh; padding: 0;">
-        <div id="itemlist" class="bg-primary border border-primary border-3" style="width: 80vw;">
+    <main class="container-fluid d-flex flex-row justify-content-between p-2 " style="height: 90vh; background-color: #FFFFFF;">
+        <div id="itemlist" class="border-right border-secondary border-3" style="width: 73vw; background-color: #EDF1FF;">
             <!-- Content for itemlist -->
         </div>
-        <div id="orderList" class="bg-secondary border border-primary border-3" style="width: 20vw;">
+        <div id="orderList" class="border-left border-primary border-3" style="width: 25vw; background-color: #EDF1FF;">
             <!-- Content for orderList -->
             <ul id="list">
                 <!-- List items will be dynamically added here -->
