--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
     <header class="p-1" style="height: 10vh; background-color: #f8b10a">
         <p class="font-weight-bold text-capitalized text-white " style="font-size: 1.5rem; font-family: 'Roboto', sans-serif; margin-left: 1em;"><span style="font-size: 2rem; font-weight: bolder; color: black;">A</span>ngels Burger</p>
     </header >
-    <main class="container-fluid d-flex flex-row justify-content-between p-2 " style="height: 90vh; background-color: #FFFFFF;">
-        <div id="itemlist" class="border-right border-secondary border-3" style="width: 73vw; background-color: #EDF1FF;">
+    <main class="container-fluid d-flex flex-row justify-content-between p-1  " style="height: auto; background-color: #FFFFFF;">
+        <div id="itemlist" class="border-right border-secondary d-flex flex-wrap gap-4 p-4 " style="width: 73vw; background-color: #EDF1FF;">
             <!-- Content for itemlist -->
         </div>
         <div id="orderList" class="border-left border-primary border-3" style="width: 25vw; background-color: #EDF1FF;">
