--- a/main.html
+++ b/main.html
@@ -4,22 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
     <title>POS Burger</title>
 </head>
 <body>
     <header class="p-1" style="height: 10vh; background-color: #f8b10a">
-        <p class="font-weight-bold text-capitalized text-white " style="font-size: 1.5rem; font-family: 'Roboto', sans-serif; margin-left: 1em;"><span style="font-size: 2rem; font-weight: bolder; color: black;">A</span>ngels Burger</p>
+        <p class="font-weight-bold text-capitalized text-white " style="font-size: 1.5rem; font-family: 'Roboto', sans-serif; margin-left: 1em;"><span style="font-size: 2rem; font-weight: bolder; color: black;">B</span>urger Shop</p>
     </header >
     <main class="container-fluid d-flex flex-row justify-content-between p-1  " style="height: auto; background-color: #FFFFFF;">
-        <div id="itemlist" class="border-right border-secondary d-flex flex-wrap gap-4 p-4 " style="width: 80vw; background-color: #EDF1FF;">
+        <div id="itemlist" class="border-right border-secondary d-flex flex-wrap gap-4 p-4 " style="width: 69.5vw; background-color: #EDF1FF;">
             <!-- Content for itemlist -->
         </div>
-        <div id="orderList" class="border-left border-primary border-3" style="width: 20vw; background-color: #EDF1FF;">
+        <div id="orderList" class="border-left border-primary border-3" style="width: 28vw; background-color: #EDF1FF;">
             <!-- Content for orderList -->
-            <ul id="list">
-                <!-- List items will be dynamically added here -->
-            </ul>
+            <table class="table table-striped">
+                <thead>
+                  <tr>
+                    <th>Order</th>
+                    <th>Quantity</th>
+                    <th>Price</th>
+                    <th>Action</th>
+                  </tr>
+                </thead>
+                <tbody id="list">
+                  
+                </tbody>
+              </table>
             <p>Total: <span id="total"></span></p>
         </div>
     </main>
