modified all files

--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
         <div id="itemlist" class="border-right border-secondary d-flex flex-wrap gap-4 p-4 " style="width: 69.5vw; background-color: #EDF1FF;">
             <!-- Content for itemlist -->
         </div>
-        <div id="orderList" class="border-left border-primary border-3" style="width: 28vw; background-color: #EDF1FF;">
+        <div id="orderList" class="border-left border-primary border-3" style="width: 28vw; background-color: #EDF1FF; display: flex; flex-direction: column; justify-content: space-between;">
             <!-- Content for orderList -->
             <table class="table table-striped">
                 <thead>
@@ -31,7 +31,7 @@
                   
                 </tbody>
               </table>
-            <p>Total: <span id="total"></span></p>
+            <p style="padding-left: .5em; height: 4em; display: flex; align-items: center;">Total Amount:&nbsp;&nbsp;<span id="total"></span></p>
         </div>
     </main>
 </body>
